# ai

./: .pre-commit-config.yaml  README.md  resource.txt
deep/: .dockerignore  .env.example  .gitignore  docker-compose.yml  dockerfile  makefile  passenger_wsgi.py  pyproject.toml
deep/src/apps/core/: models.py
deep/src/apps/core/migrations/: 0001_initial.py
deep/src/apps/diabetes/: apps.py
deep/src/config/: settings.py
fastai/: .dockerignore  .env.example  .gitignore  config.ini  docker-compose.yml  dockerfile  pyproject.toml
fastai/src/apps/lesson1/: apps.py  services.py  urls.py  views.py
fastai/src/config/: settings.py  urls.py  wsgi.py
jupyter/: docker-compose.yml  dockerfile
jupyter/src/: train.py
kaggle/randomforest/: .dockerignore  .env.example  .gitignore  docker-compose.yml  dockerfile  pyproject.toml
kaggle/vila/: .dockerignore  .env.example  .gitignore  docker-compose.yml  makefile  pyproject.toml
kaggle/vila/src/: main.py
llama2/: .dockerignore  .env.example  docker-compose.yml  dockerfile  pyproject.toml
llama2/src/: main.py
llama2/src/config/: settings.py
llama2/src/core/: config.py
