[tool.poetry]
name = "deep"
version = "0.0.1"
description = ""
authors = ["Roman <iamromandev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
## reserved packages
#requests = "2.29.0" # for namecheap host issue
## end reserved packages
## core
loguru = "0.7.0"
coreapi = "2.3.3" # must be installed for TokenAuthentication
## django
django = "4.2.4" # 4.2 drops support for mariadb 10.3
django-environ = "0.10.0"
django-cors-headers = "4.2.0"
django-browser-reload = "1.11.0"
dj-static = "0.0.6"
django-soft-delete = "0.9.21"
django-taggit = "4.0.0"
## rest
djangorestframework = "3.14.0"
djangorestframework-simplejwt = "5.2.2"
#dj-rest-auth = "4.0.1"
## ui
django-bootstrap5 = "23.1"
django-bootstrap-icons = "0.8.3"
# django-tailwind = "3.5.0"
## others
pymysql = "1.0.3"
## deep
tensorflow = "2.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
